--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Minimalist Theme",
   "description": "A minimalst, flat, dark theme that's based on Code's Dark Modern theme",
   "icon": "icon.png",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "publisher": "muhammadmohsen",
   "author": "Muhammad Mohsen <muhammadaeh@gmail.com>",
   "license": "MIT",
@@ -32,14 +32,19 @@
         "path": "./themes/vsc-minimalist-theme.json"
       },
       {
-        "label": "VSC Minimalist (Darker)",
+        "label": "VSC Minimalist (Flat)",
         "uiTheme": "vs-dark",
-        "path": "./themes/vsc-minimalist-theme-darker.json"
+        "path": "./themes/vsc-minimalist-theme-flat.json"
       },
       {
         "label": "VSC Minimalist (One Dark Pro Colors)",
         "uiTheme": "vs-dark",
         "path": "./themes/vsc-minimalist-theme-odp.json"
+      },
+      {
+        "label": "VSC Minimalist (Oak)",
+        "uiTheme": "vs-dark",
+        "path": "./themes/vsc-minimalist-theme-oak.json"
       }
     ]
   }
